[package]
name = "nsutils"
description = """
    Command-line utilities for making use of Linux namespaces
"""
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["linux", "container", "namespace", "process"]
homepage = "https://github.com/dongsupark/nsutils-rs"
documentation = "http://github.com/dongsupark/nsutils-rs"
version = "0.0.5"
authors = ["Dongsu Park <dpark@posteo.net>"]

[dependencies]
procinfo = "0.3.1"
text_io = "0.1.6"
unshare = "0.1.14"

[lib]
name = "nsutils"
path = "src/lib.rs"
doctest = false

