[package]
name = "nsutils"
description = """
    Command-line utilities for making use of Linux namespaces
"""
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["linux", "container", "namespace", "process"]
homepage = "https://github.com/dongsupark/nsutils"
documentation = "http://github.com/dongsupark/nsutils"
version = "0.0.1"
authors = ["Dongsu Park <dpark@posteo.net>"]

[dependencies]
unshare = "0.1.14"
argparse = "0.2.1"

