[package]
name = "lsns"
description = """
    List all Linux namespaces
"""
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["linux", "container", "namespace", "process"]
homepage = "https://github.com/dongsupark/nsutils-rs"
documentation = "http://github.com/dongsupark/nsutils-rs"
version = "0.0.1"
authors = ["Dongsu Park <dpark@posteo.net>"]

[dependencies]
argparse = "0.2.1"
procinfo = "0.3.1"
unshare = "0.1.14"
text_io = "0.1.6"

[[bin]]
name = "lsns"
path = "src/main.rs"
